--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,10 @@
     border-radius: 7px;
     /*font-weight: bold;*/
 }
+h1 {
+    /*text-shadow: 3px 5px 0 hsla(24,100%,0%,.5);*/
+    text-shadow: 0px -1px 0 rgba(2,1,1,0.42);
+    font-size: 3em;
+    color: #dfdddd;
+}
+
