Change background-color for h2

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1 {
     color: #dfdddd;
 }
 h2 {
-    background-color: lightgray;
+    background-color: #dfdddd;
     border-bottom: 1x solid blue;
     padding-left: 25px;
 }
